--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>The Dirty Magicians' Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -13,7 +13,62 @@
   <![endif]-->
 </head>
 
-<body>
-  <h1>My Resume</h1>
+<header>
+  <nav>
+    <a href="#">About</a>
+    <a href="#">Skills</a>
+    <a href="#">Work history</a>
+    <a href="#">Contact</a>
+  </nav>
+  <div>
+    <img src="images/yes.jpg" />
+    <h1>Zack Nemec - The Dirty Magician</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
+      distinctio odio, iusto molestiae consectetur blanditiis!
+    </p>
+    <button>Projects</button>
+  </div>
+</header>
+<section>
+  <div class="about">
+    <h2>About Me</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum,
+      eligendi. Id asperiores et ducimus quia quam! Reiciendis, nisi.
+      Facilis accusamus unde corrupti ullam perspiciatis similique amet est
+      vel harum quasi? Non saepe consequatur ipsa! Nihil magni in esse est,
+      earum voluptas sit incidunt recusandae saepe, placeat expedita aut
+      nobis fugit.
+    </p>
+  </div>
+  <div class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem ipsum dolor sit.</li>
+      <li>lorem</li>
+      <li>Lorem ipsum dolor sit amet consectetur.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+    </ul>
+  </div>
+</section>
+<section class="wh">
+  <h2>Work history</h2>
+  <ul>
+    <li>Lorem, ipsum - 1 Year</li>
+    <li>Lorem ipsum dolor sit - 10 years</li>
+    <li>lorem - 100 years</li>
+    <li>Lorem ipsum dolor sit amet consectetur - 1000 years</li>
+    <li>Lorem ipsum dolor sit amet - 10000 years</li>
+  </ul>
+</section>
+<footer>
+  <h2>Contact</h2>
+  <ul class="Contact">
+    <li>lorem@lorem.com</li>
+    <li>555-555-5555</li>
+  </ul>
+</footer>
 </body>
 </html>
